--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 </head>
 <body>
 	<header>
-		<h1>RoboDance</h1>
+		<div class="h1_box">
+			<h1>RoboDance</h1>
+		</div>
 		<p>Press &#9654; and use the mouse to make the robot dance</p>
 	</header>
 	<!--Video -->
